--- a/loops/index.html
+++ b/loops/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Loops</title>
-    <script src="js/main.js"></script>
+    <title>spin 151</title>
   </head>
-  <body></body>
+  <body>
+    <script src="js/main.js"></script>
+  </body>
 </html>
